[REFACTOR] Refactored code based on SonarCube